# halloumi

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE.md  README.md  build.sh  run.sh  sncu.sh  srun-rwth.sh  srun-tud.sh  test.sh
acceptance/: acceptance.test.50-days.json  config_heo_sse_300k.json  constants.json  halloumiconfig.json  standard_cudajectory_config.json  test.nocollision.samples.json  test.withcollision.samples.json
include/: constants.cuh  cuda_array.hpp  device_array.cuh  device_ephemeris.cuh  ephemeris.hpp  json.hpp  kernel.cuh  kernels.cuh  propagate.cuh  propagation_context.hpp  rkf_parameters.hpp  samples.hpp  simulation.hpp  states.hpp  tableau.hpp  types.hpp  utils.hpp
include/core/: types.cuh
include/cuda/: array.cuh  constants.cuh  cuda_array.hpp  cuda_ptr.hpp  device_array.cuh  device_ephemeris.cuh  utils.cuh  vec.cuh
include/simulation/: ephemeris.hpp  propagation_context.hpp  rkf_parameters.cuh  rkf_parameters.hpp  simulation.hpp  tableau.cuh  tableau.hpp
include/simulation/environment/: constants.cuh  constants.hpp  environment.hpp  ephemeris.cuh  ephemeris.hpp
include/simulation/propagation/: cuda_utils.cuh  math_utils.cuh  time_step_criterion.cuh
src/: constants.cu  dump.cu  dump.cuh  ephemeris.cpp  kernel.cu  kernels.cu  logger.hpp  main.cpp  main.cu  propagate.cu  propagation_context.cpp  rkf_parameters.cpp  samples.cpp  simulation.cpp  states.cpp  utils.cpp  utils.cu  utils.cuh
src/core/: array.cuh  matrix.cuh  tensor.cuh  types.cuh  utils.cuh  vec.cuh
src/cuda/: array.cuh  constants.cu  cuda_ptr.cuh  matrix.cuh  tensor.cuh  utils.cuh
src/propagation/: advance_step.cu  advance_step.cuh  all_terminated.cu  all_terminated.cuh  cuda_utils.cu  cuda_utils.cuh  evaluate_ode.cu  evaluate_ode.cuh  math_utils.cu  math_utils.cuh  prepare_simulation_run.cu  prepare_simulation_run.cuh  propagate.cu  propagate.cuh  time_step_criterion.cuh
src/simulation/: constants.cuh  ephemeris.cpp  ephemeris.cu  ephemeris.cuh  propagate.cu  propagation_context.cpp  rkf_parameters.cpp  rkf_parameters.cu  rkf_parameters.cuh  simulation.cpp  simulation.cu  simulation.cuh  simulation.hpp  tableau.cpp  tableau.cu  tableau.cuh
src/simulation/environment/: constants.cuh  environment.cpp  ephemeris.cpp  ephemeris.cu  ephemeris.cuh
src/simulation/propagation/: cuda_utils.cuh  math_utils.cuh  propagate.cu  propagate.cuh  time_step_criterion.cuh
tests/: all_terminated_tests.cu  prepare_simulation_run_tests.cu
